[package]
name = "update_hosts2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.5.0"}
regex = {version = "1.3.3"}
fstrings = {version = "0.2.3"}
clap = { version = "4.0", features = ["derive"] }

[profile.release]
debug = 1